--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -8,6 +8,17 @@
 
     <div class="update-card">
         <div class="card-header">
+            <h3>📋 V0.0.24.0</h3>
+        </div>
+        <div class="card-body">
+            <div class="update-item">
+                <span class="icon">✨</span>
+                <span>1. Improved the search function for Documents.</span>
+            </div>
+        </div>
+    </div>
+    <div class="update-card">
+        <div class="card-header">
             <h3>📋 V0.0.23.0</h3>
         </div>
         <div class="card-body">
