--- a/Components/Pages/Document.razor
+++ b/Components/Pages/Document.razor
@@ -109,7 +109,7 @@
         <small class="text-muted">顯示 @(filteredDocuments?.Count ?? 0) / @(allDocuments?.Count ?? 0) 個文件</small>
     </div>
     <div class="table-responsive">
-        <table class="table table-striped table-hover mb-0">
+        <table class="table table-striped table-hover mb-0 table-sm">
             <thead class="thead-dark">
                 <tr>
                     <th style="width: 40%;">File Name</th>
